# cookiecutter-py-package

./: .editorconfig  .gitignore  CONTRIBUTING.rst  README.rst  cookiecutter.json  requirements_dev.txt
.github/workflows/: build-pipeline.yml
docs/: Makefile  console_script_setup.rst  make.bat  prompts.rst  pypi_release_checklist.rst  tutorial.rst
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml
{{cookiecutter.project_slug}}/docs/: installation.rst  make.bat
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/tests/CI_docker/: build_{{cookiecutter.project_slug}}_testsuite_image.sh
{{cookiecutter.project_slug}}/tests/CI_docker/context/: environment_{{cookiecutter.project_slug}}.yml  {{cookiecutter.project_slug}}_ci.docker
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  {{cookiecutter.project_slug}}_cli.py
