# SPDX-License-Identifier: {{ cookiecutter.open_source_license }}
# FileType: CONFIG
# FileCopyrightText: {% now 'utc', '%Y' %}, {{ cookiecutter.full_name }} at GFZ Potsdam



[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools-git",
]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_slug}}"
dynamic = ["version"]
description = "{{cookiecutter.project_short_description}}"
authors = [
  {name = """ {{cookiecutter.full_name}} """, email = "{{cookiecutter.email}}"}
]
license = {text = "{{cookiecutter.open_source_license}}"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    {% if cookiecutter.open_source_license == 'MIT' -%}
    "License :: OSI Approved :: MIT License",
    {% elif cookiecutter.open_source_license == 'EUPL-1.2' %}
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    {% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}
    "License :: OSI Approved :: BSD License",
    {% elif cookiecutter.open_source_license == 'ISC' -%}
    "License :: OSI Approved :: ISC License (ISCL)",
    {% elif cookiecutter.open_source_license == 'Apache-2.0' -%}
    "License :: OSI Approved :: Apache Software License",
    {% elif cookiecutter.open_source_license == 'GPL-3.0-or-later' -%}
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    {% elif cookiecutter.open_source_license == 'NOASSERTION' -%}
    # "License :: not yet set, add here later before publishing to PyPi!",
    {% endif %}"Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords = [
    "remote sensing"
]
dependencies = [
  {% if cookiecutter.command_line_interface.lower() == "typer" -%}
  "typer"
{%- endif %}
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

maintainers = [
  {name = """ {{cookiecutter.full_name}} """, email = "{{cookiecutter.email}}"}
]

[project.optional-dependencies]
doc = [
    "sphinx>=4.1.1",
    "sphinx-argparse",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
    "numpydoc>=1.7"
]

test = [
    "pytest>=3",
    "pytest-cov",
    "pytest-reporter-html1",
    "urlchecker"
]

lint = [
    {%- if cookiecutter.use_precommit == 'y' %}
    "pre-commit",
    {%- else %}
    "flake8",
    "pycodestyle", 
    "pydocstyle"
    {%- endif %}
]

dev = [
    "coverage",     # testing
    {%- if cookiecutter.use_precommit == 'y' %}
    "pre-commit",   # linting
    {%- endif %}
    "pytest",       # testing
    "twine",        # deployment
    "build"         # deployment
]

[project.urls]
"Source code" = "https://git.gfz-potsdam.de/{{cookiecutter.__gh_slug}}"
"Issue Tracker" = "https://git.gfz-potsdam.de/{{cookiecutter.__gh_slug}}/-/issues"
"Documentation" = "https://fernlab.git-pages.gfz-potsdam.de/{{cookiecutter.__gh_slug}}/doc/"
"Change log" = "https://git.gfz-potsdam.de/{{cookiecutter.__gh_slug}}/-/blob/main/HISTORY.rst"
# "Zenodo" = "https://zenodo.org/record/doi_number"

{%- if cookiecutter.use_precommit == 'y' %}
[tool.ruff]
# Top-level settings for Ruff, like exclusion patterns or file line endings, can go here.

[tool.ruff.format]
docstring-code-format = true
{%- endif %}

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
exclude = [
    "docs*",
    "tests*",
]
namespaces = false
{% if cookiecutter.command_line_interface == 'Yes' %}
[project.scripts]
{{cookiecutter.slug}} = "{{cookiecutter.project_slug}}.{{cookiecutter.project_slug}}_cli:main"
{% endif %}